# rag-llm-local

./: .gitignore  README.md  config.py  main_rag.py  pyproject.toml  requirements.txt
